Bug #1352 - Help: Text doesn't align properly on tag archive page

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1671,7 +1671,8 @@ body{
         }
     }
     h2.help-title,
-    .help-tags {
+    .help-tags,
+    .cat-list{
         margin-left: 21px;
     }
 }
